# rs-slack

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs
src/api/: chat.rs  mod.rs
