[package]
name = "slack-sdk"
version = "0.0.1"
edition = "2021"
description = "Unofficial Slack SDK for Rust"
authors = ["Conner Holden <80974257+cloud303-cholden@users.noreply.github.com>"]
keywords = ["slack", "api", "sdk"]
categories = ["web-programming", "api-bindings"]
repository = "https://github.com/cloud303-cholden/rs-slack"
readme = "README.md"

[lib]
name = "slack"

[dependencies]
async-trait = "0.1.74"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
